--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 
-group 'org.example'
+group 'com.epam'
 version '1.3.5'
 
 targetCompatibility = 8
@@ -32,10 +32,12 @@ jar {
 }
 
 publishing {
-    repositories {
-        maven {
-            // change to point to your repo, e.g. http://my.org/repo
-            url = layout.buildDirectory.dir('repo')
+    publications {
+        maven(MavenPublication) {
+            groupId 'com.epam'
+            artifactId 'utils'
+            version '1.3.5'
+            from components.java
         }
     }
 }
